Fixing scrolling on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1639,11 +1639,15 @@ body .swiftype-widget .autocomplete {
       border: 0;
       bottom: 0;
       left: 0;
+      margin: 0;
       overflow-y: auto;
       position: fixed;
       right: 0;
       top: 0;
       z-index: 999; }
+      #main .sidebar.active + .content {
+        height: 0;
+        overflow: hidden; }
       #main .sidebar.active .cancel {
         display: block;
         float: right;
