--- a/assets/scss/_responsive.scss
+++ b/assets/scss/_responsive.scss
@@ -77,11 +77,16 @@
         border: 0;
         bottom: 0;
         left: 0;
+        margin: 0;
         overflow-y: auto;
         position: fixed;
         right: 0;
         top: 0;
         z-index: 999;
+        & + .content {
+          height: 0;
+          overflow: hidden;
+        }
         .cancel {
           display: block;
           float: right;
